style.css
/* ... */
p, li {
 line-height: 140%;
 font-size: 16px;
}

p, pre, ul {
 margin-bottom: 24px;
}

pre {
	margin-top: 12px;
}

.aligncenter {
	text-align: center;
	margin: 0 auto;
}

.alignright {
	text-align: right;
}

.wp-caption-text {
	font-size: 12px;
	color: #666;
	font-style: italic;
}

section.post_content h3 {
	margin-top: 15px;
	margin-bottom: 10px;
}

a {
	color: #D35400;
	text-decoration: none;
}

p > strong, li > strong {
	font-weight: 600;
	color: #404040
}

.post_content a {
	/* Remarco un poco los enlaces en los cuerpos de los posts */
	border-bottom: 1px dotted #e67e22;
}

a:hover {
	color: #e67e22;
	text-decoration: none;
	border-bottom: 1px solid #e67e22;
}

div[id^="attachment"] a, .trackable_sharing a {
	/* ... pero quito el borde a los enlaces de las imágenes y otras cosillas*/
	border: none;
}

a.no-border, a:hover.no-border {
	border: none;
}

/* Los títulos de los posts no los quiero en rojo */
.post h1 a[rel="bookmark"], .post h1 a[rel="bookmark"]:hover {
	color: #505050;
	border-bottom: none;
}

/* Configuro los trackbacks/pingbacks para que no muestren el texto del enlace */
.pingback .comment-text h4:before, .trackback .comment-text h4:before  {
	content: "Pingback: ";
	display: block;
} 
.pingback .comment-text p, .trackback .comment-text p {
	display: none;
} 

/* Cabecera */
.blog-header {
	background: top left no-repeat url(img/logo.png);
	border-bottom: 1px solid #ddd;
	padding-bottom: 15px;
	margin-top: 35px;
}

.blog-header h1 {
	font-size: 64px;
	color: #404040;
	text-shadow: 3px 3px 2px rgba(0,0,0,0.2);
	margin-top: 4px;
	margin-left: 190px;
}

.blog-header .tagline {
	margin-top: 12px;
	font-size: 20px;
	color: #888;
	font-weight: 500;
	margin-left: 190px;
}

@media only screen and (max-width: 480px) {
	.blog-header {
		background: none;
	}
	
	.blog-header h1, .blog-header .tagline {
		margin-left: 0px;
	}
}

/* Alineado de imágenes (deshabilitado para móviles) */
@media only screen and (min-width: 481px) {
	.wp-caption.alignleft {
		display: inline;
		float: left;
		margin-right: 20px;
		margin-top: 4px;
	}
	.wp-caption.alignright {
		display: inline;
		float: right;
		margin-left: 20px;
		margin-top: 4px;
	}
	.wp-caption.aligncenter {
		clear: both;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
	.wp-caption.alignleft,
	.wp-caption.alignright,
	.wp-caption.aligncenter {
		margin-bottom: 10px;
	}
}

/* Formato especial para botones */
.btn-koalite {
	color: #FFFFFF;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	background-color: #D35400;
	*background-color: #D35400;
	background-image: -moz-linear-gradient(top, #E67E22, #D35400);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#E67E22), to(#D35400));
	background-image: -webkit-linear-gradient(top, #E67E22, #D35400);
	background-image: -o-linear-gradient(top, #E67E22, #D35400);
	background-image: linear-gradient(to bottom, #E67E22, #D35400);
	background-repeat: repeat-x;
	border-color: #D35400;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E67E22', endColorstr='#D35400', GradientType=0);
	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}
.btn-koalite:hover,
.btn-koalite:active,
.btn-koalite.active,
.btn-koalite.disabled,
.btn-koalite[disabled] {
	color: #FFFFFF;
	background-color: #D35400;
	*background-color: #003bb3;
}

/* Formato de cosas varias del pie de cada post */
.trackable_sharing img { 
	margin-top: -5px; 
	border: 0px;
}

.trackable_sharing_text, .tags-header, .related-posts p { 
	font-size: 16px; 
	margin-right: 20px; 
	color: #666; 
}

.trackable_sharing_text {
	display: inline;
}

.trackable_sharing { 
	margin-top: 30px; 
}

.tags, .related-posts { 
	margin-top: 10px; 
}

.postmetadata { 
	margin-top: 20px; 
}

.related-posts ol li {
	margin-left: 25px;
}

.sidebar {
	opacity: .6;
}

.sidebar:hover {
	opacity: 1;
}

